Bug 589775 - [ACR Extension] Compatibility button not aligned correctly

--- a/chrome/skin/overlay.css
+++ b/chrome/skin/overlay.css
@@ -41,3 +41,15 @@
     margin-bottom: 0;
 }
 
+/* FF4 EM only */
+
+#addon-list acrCompatibilityButton[OS=Darwin]
+{
+    margin-top: 2px;
+}
+#addon-list acrCompatibilityButton[OS=Linux],
+#addon-list acrCompatibilityButton[OS=WINNT]
+{
+    margin-top: -1px;
+}
+
